# f1-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/: championship_simulations.parquet  quali_test_preds_2024.parquet  qualifying_data_2024.parquet  qualifying_features_2024.parquet  rl_evaluation_trace.csv  strategy_sim_results.parquet  telemetry_2025_R1.parquet  telemetry_2026_R1.parquet  tyre_cliffs_2024.parquet  tyre_features_2024.parquet  tyre_stints_2024.parquet  tyre_test_preds_2024.parquet  undercut_payoff_matrix.csv
docs/: data_sources.md  index.html
docs/assets/: index-BNV9mlnq.css  index-BYQdZK1K.js
projects/01_race_eda/: README.md  linkedin_post.md
projects/01_race_eda/outputs/: lap_time_evolution.html  position_changes.html
projects/01_race_eda/src/: analysis.py
projects/02_tyre_whisperer/: README.md  linkedin_post.md
projects/02_tyre_whisperer/models/: metrics.json  xgb_tyre_degradation.json
projects/02_tyre_whisperer/outputs/: degradation_curves.html  prediction_scatter.html
projects/02_tyre_whisperer/src/: data_collection.py  feature_engineering.py  modeling.py  visualizations.py
projects/03_qualifying_prophet/: README.md  linkedin_post.md
projects/03_qualifying_prophet/outputs/: feature_importance.html
projects/03_qualifying_prophet/src/: data_collection.py  feature_engineering.py  modeling.py  visualizations.py
projects/04_pit_wall_strategist/: README.md  linkedin_post.md
projects/04_pit_wall_strategist/outputs/: strategy_landscape.html
projects/04_pit_wall_strategist/src/: monte_carlo.py  (+2 more)
projects/05_undercut_game/: README.md  linkedin_post.md
projects/06_championship_monte_carlo/: README.md  linkedin_post.md
projects/07_telemetry_decoder/: README.md  linkedin_post.md
projects/08_virtual_strategist/: README.md  linkedin_post.md
shared/: __init__.py  constants.py  data_loader.py  utils.py  viz.py
web/: index.html  package-lock.json  package.json  sync-assets.js  vite.config.ts
web/src/: App.tsx  index.css
(+42 files in other folders)
